--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -7,3 +7,32 @@ body{
     background: url('/assets/images/login_bg.jpg') no-repeat center;
     background-size: cover;
 }
+.loginAndRegBox{
+    width: 400px;
+    height: 310px;
+    background-color: #fff;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform:translate(-50%,-50%);
+}
+.title-box{
+    height: 60px;
+    background: url('/assets/images/login_title.png') no-repeat center;
+}
+.layui-form{
+    padding: 0 20px;
+}
+.reg-box{
+    display: none;
+}
+.links{
+    display: flex;
+    justify-content: flex-end;
+}
+.links a{
+    font-size: 12px;
+}
+.layui-form-item{
+    position: relative;
+}
